--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Solo - audio recorder.
+title: Solo
 email: solo@solo-system.com
 
 description: Solo records audio.  Outdoor, continuous, battery-powered, based on raspberry-pi, open source, build-your-own, high-fidelity, configurable, user-servicable, cheap, modifiable, extensible, modular.
