--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ title: Solo
 email: info@solo-system.com
 
 #description: Solo - a field recorder for bioacoustic research.  Outdoor, continuous, battery-powered, based on Raspberry-Pi, self-built, high-fidelity, configurable, user-servicable, cheap, modifiable, extensible, modular, open source.
-description: Solo field recorder.
+description: If a tree falls in a forest and no one is around?  Solved.
 
 
 baseurl: "" # the subpath of your site, e.g. /blog
