--- a/_config.yml
+++ b/_config.yml
@@ -7,17 +7,15 @@
 
 # Site settings
 title: Solo
-email: info@solo-system.com
+email: solorecorder@gmail.com
 
 #description: Solo - a field recorder for bioacoustic research.  Outdoor, continuous, battery-powered, based on Raspberry-Pi, self-built, high-fidelity, configurable, user-servicable, cheap, modifiable, extensible, modular, open source.
 description: If a tree falls in a forest and no one is around?  Solved.
-
 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://www.solo-system.org" # the base hostname & protocol for your site
 #twitter_username: whatever
 github_username:  solo-system
-
 
 # Build settings
 markdown: kramdown
